--- a/README
+++ b/README
@@ -1,49 +1,58 @@
-This is your new Play application
-=================================
+# Alligator: A Deductive Approach for the Integration of Industry 4.0 Standards
 
-This file will be packaged with your application when using `activator dist`.
+This project contains the rules to integrate two AML files using a cannonical model and rules written in ProLog - **Rules4AMLIntegrator**.
 
-There are several demonstration files available in this template.
+## Dependencies
+This tool depends on the following software
 
-Controllers
-===========
+* Prolog 7.2.3
+* JDK 1.8
+* Prolog Connector 3.1.2
+* Hermit OWL Reasoner 
+* OWL API
+* Play Framework
 
-- HomeController.java:
+Download Prolog: http://www.swi-prolog.org/download/stable
+Donwload Prolog Connector: https://sewiki.iai.uni-bonn.de/research/pdt/connector/library
+Donwload Hermit OWL Reasoner: http://www.hermit-reasoner.com/download.html
+Donwload OWL API: https://sourceforge.net/projects/owlapi/
+Donwload Play framework: https://www.playframework.com/download
 
-  Shows how to handle simple HTTP requests.
+## IDE support 
+The quick and easy way to start compiling, running and coding **Rules4AMLIntegrator** we provide a java project in Eclipse and we a Prolog Connector. Thus, you need to install tools:
+* intellij Idea:  https://www.jetbrains.com/idea/
 
-- AsyncController.java:
+In windows you need to add the following entries system PATH
 
-  Shows how to do asynchronous programming when handling a request.
+    $ C:\Program Files\swipl\bin; C:\Program Files\swipl\lib\jpl.jar; C:\PrologConnectorJarFolder\org.cs3.prolog.connector_3.1.2.201504300958.jar;
 
-- CountController.java:
+## Install and build from the source code  
+To obtain the latest version of the project please clone the github repository
 
-  Shows how to inject a component into a controller and use the component when
-  handling requests.
+Naviage to project source in terminal or command prompt 
+for windows :
+activator run
 
-Components
-==========
+for linux : 
+./activator run
 
-- Module.java:
+Other possible ways to run :
+Launch play framework and import the project and run it from there.
 
-  Shows how to use Guice to bind all the components needed by your application.
 
-- Counter.java:
+## Updating Krextor Rules 
+### What is Krextor?
 
-  An example of a component that contains state, in this case a simple counter.
+Krextor is a an extensible XSLT-based framework for extracting RDF from XML.                 
 
-- ApplicationTimer.java:
+Read more at : https://github.com/EIS-Bonn/krextor
 
-  An example of a component that starts when the application starts and stops
-  when the application stops.
+Please navigate to /resources/amlrules/aml.xsl
 
-Filters
-=======
+Here you can update, remove or add rules for RDF conversion.
 
-- Filters.java:
 
-  Creates the list of HTTP filters used by your application.
+## License
 
-- ExampleFilter.java
-
-  A simple filter that adds a header to every response.
+* Copyright (C) 2015-2016 EIS Uni-Bonn
+* Licensed under the Apache License
